--- a/app/src/main/res/values/string-arrays.xml
+++ b/app/src/main/res/values/string-arrays.xml
@@ -36,6 +36,7 @@
         <item>3</item>
     </string-array>
 
+    <!-- Map zoom levels -->
     <string-array name="pref_map_zoom_level_titles">
         <item>High</item>
         <item>Medium</item>
@@ -48,6 +49,19 @@
         <item>2</item>
         <item>1</item>
         <item>0</item>
+    </string-array>
+
+    <!-- Overwrite tags -->
+    <string-array name="pref_overwrite_tags_titles">
+        <item>Replace all</item>
+        <item>Insert at the beginning</item>
+        <item>Insert at the end</item>
+    </string-array>
+
+    <string-array name="pref_overwrite_tags_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
 </resources>
