--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,9 +12,9 @@
     android:background="#ffffff">
 
     <ImageView
-        android:id="@+id/imageAppIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/imageAppIcon"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
@@ -66,9 +66,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageLogo"
-        android:layout_below="@+id/textAppVersion"
+        android:layout_above="@+id/textName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="310dp"
         android:src="@drawable/mohb_logo"/>
 
     <TextView
@@ -77,7 +77,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/info_name"
         android:id="@+id/textName"
-        android:layout_below="@+id/imageLogo"
+        android:layout_above="@+id/textEmail"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -87,7 +87,7 @@
         android:textSize="12sp"
         android:text="@string/info_website"
         android:id="@+id/textEmail"
-        android:layout_below="@+id/textName"
+        android:layout_above="@+id/textSkype"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -97,7 +97,7 @@
         android:textSize="12sp"
         android:text="@string/info_skype"
         android:id="@+id/textSkype"
-        android:layout_below="@+id/textEmail"
+        android:layout_above="@+id/textDeveloper"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -107,7 +107,7 @@
         android:textSize="11sp"
         android:text="@string/info_developer"
         android:id="@+id/textDeveloper"
-        android:layout_below="@+id/textSkype"
+        android:layout_above="@+id/textDeveloperName"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:textStyle="italic" />
@@ -119,8 +119,9 @@
         android:textSize="11sp"
         android:text="@string/info_developer_name"
         android:id="@+id/textDeveloperName"
-        android:layout_below="@+id/textDeveloper"
         android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
         android:textStyle="italic" />
 
 </RelativeLayout>
