--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,8 @@
 
     <dimen name="text_margin">30dp</dimen>
     <dimen name="text_detail_margin_left">12dp</dimen>
+    <dimen name="text_size_time">48sp</dimen>
+    <dimen name="text_size_date">24sp</dimen>
 
     <dimen name="input_text_height">48dp</dimen>
     <dimen name="edit_text_size">20sp</dimen>
