--- a/app/src/main/res/layout-v21/list_item.xml
+++ b/app/src/main/res/layout-v21/list_item.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listItem"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
+    android:layout_height="match_parent"
+    android:background="@drawable/item_tile"
     android:elevation="@dimen/item_elevation"
-    android:background="@drawable/item_tile" >
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:layout_margin="@dimen/item_margin"
         android:gravity="center"
         android:textColor="@color/colorWhiteText"
