--- a/app/src/main/res/values-pt/string-arrays.xml
+++ b/app/src/main/res/values-pt/string-arrays.xml
@@ -54,8 +54,8 @@
     <!-- Overwrite tags -->
     <string-array name="pref_overwrite_tags_titles">
         <item>Substituir tudo</item>
-        <item>Inserir no começo</item>
-        <item>Inserir no final</item>
+        <item>Inserir antes</item>
+        <item>Inserir depois</item>
     </string-array>
 
     <string-array name="pref_overwrite_tags_entry_values">
