--- a/app/src/main/res/layout/activity_flickr_note.xml
+++ b/app/src/main/res/layout/activity_flickr_note.xml
@@ -19,9 +19,7 @@
         android:text=""
         android:hint="@string/text_hint_flickr_note_title"
         android:inputType="text"
-        android:paddingLeft="@dimen/flickr_note_margin"
-        android:paddingTop="@dimen/flickr_note_margin"
-        android:paddingRight="@dimen/flickr_note_margin"
+        android:padding="@dimen/flickr_note_margin"
         android:singleLine="true"
         android:textSize="@dimen/flickr_note_title_text_size"
         android:textStyle="bold"
@@ -30,17 +28,19 @@
     <EditText
         android:id="@+id/editTextFlickrNoteDescription"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/flickrTags"
         android:layout_below="@id/editTextFlickrNoteTitle"
         android:autofillHints=""
         android:background="@null"
         android:cursorVisible="true"
         android:gravity="top|fill_horizontal|start"
-        android:text=""
         android:hint="@string/text_hint_flickr_note_description"
         android:inputType="textMultiLine"
-        android:padding="@dimen/flickr_note_margin"
+        android:paddingLeft="@dimen/flickr_note_margin"
+        android:paddingRight="@dimen/flickr_note_margin"
         android:singleLine="false"
+        android:text=""
         android:textSize="@dimen/flickr_note_description_text_size"
         tools:targetApi="o" />
 
