--- a/app/src/main/res/layout-v21/gear_item.xml
+++ b/app/src/main/res/layout-v21/gear_item.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/item_tile"
+    android:elevation="@dimen/gear_item_elevation"
+    android:gravity="center" >
 
     <TextView
         android:id="@+id/gearView"
