--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,8 +55,12 @@
     <dimen name="view_footer_height">1dp</dimen>
     <dimen name="view_archive_footer_height">60dp</dimen>
 
-    <dimen name="simple_note_text_padding">20dp</dimen>
+    <dimen name="simple_note_text_padding">10dp</dimen>
     <dimen name="simple_note_font_size">30sp</dimen>
+
+    <dimen name="gear_item_text_padding">10dp</dimen>
+    <dimen name="gear_item_margin">10dp</dimen>
+    <dimen name="gear_item_elevation">0.25dp</dimen>
 
     <dimen name="flickr_note_margin">20dp</dimen>
     <dimen name="flickr_note_title_text_size">21sp</dimen>
@@ -71,6 +75,9 @@
     <dimen name="flickr_photoset_number_size">14sp</dimen>
     <dimen name="flickr_photo_title_size">18sp</dimen>
     <dimen name="flickr_photo_description_size">14sp</dimen>
+
+    <dimen name="photoset_item_elevation">0.25dp</dimen>
+    <dimen name="photo_item_elevation">0.25dp</dimen>
 
     <dimen name="about_layout_margin">20dp</dimen>
 
