--- a/app/src/main/res/menu/options_gear_note.xml
+++ b/app/src/main/res/menu/options_gear_note.xml
@@ -23,5 +23,10 @@
         android:title="@string/action_reorder"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="5"
+        android:title="@string/action_help"
+        app:showAsAction="never" />
 
 </menu>
