--- a/app/src/main/res/layout-v21/gear_item.xml
+++ b/app/src/main/res/layout-v21/gear_item.xml
@@ -4,8 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/item_tile"
-    android:elevation="@dimen/gear_item_elevation"
+    android:background="@drawable/gear_item_tile"
+    android:elevation="@dimen/gear_note_item_elevation"
     android:gravity="center" >
 
     <TextView
@@ -13,11 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/gear_item_margin"
-        android:layout_marginRight="@dimen/gear_item_margin"
+        android:layout_marginLeft="@dimen/gear_note_item_margin"
+        android:layout_marginRight="@dimen/gear_note_item_margin"
         android:background="@color/colorBackgroundWhite"
         android:gravity="center"
-        android:padding="@dimen/gear_item_text_padding"
+        android:padding="@dimen/gear_note_item_text_padding"
         android:textColor="@color/colorBlackText"
         android:textStyle="bold"
         android:hint="gear item"/>
