--- a/app/src/main/res/layout-v21/photo_item.xml
+++ b/app/src/main/res/layout-v21/photo_item.xml
@@ -5,20 +5,20 @@
     tools:ignore="ContentDescription"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/flickr_photo_thumb_size"
     android:background="@drawable/item_tile"
-    android:elevation="@dimen/photo_item_elevation" >
+    android:elevation="@dimen/flickr_photo_item_elevation" >
 
     <ImageView
         android:id="@+id/imagePhoto"
-        android:layout_width="@dimen/flickr_photo_size"
-        android:layout_height="@dimen/flickr_photo_size"
+        android:layout_width="@dimen/flickr_photo_thumb_size"
+        android:layout_height="@dimen/flickr_photo_thumb_size"
         android:layout_marginRight="@dimen/item_margin" />
 
     <LinearLayout
         android:id="@+id/layoutPhotoText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_toEndOf="@id/imagePhoto">
 
@@ -27,16 +27,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/flickr_photo_title_size"
+            android:textStyle="bold"
+            android:hint="Title"
             android:layout_marginTop="@dimen/item_margin"
-            android:layout_marginEnd="@dimen/item_text_margin_right" />
+            android:layout_marginEnd="@dimen/item_margin" />
 
         <TextView
             android:id="@+id/textPhotoDescription"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/item_margin"
+            android:layout_marginBottom="@dimen/item_margin"
             android:textSize="@dimen/flickr_photo_description_size"
-            android:layout_marginEnd="@dimen/item_text_margin_right"
-            android:layout_marginBottom="@dimen/item_margin"/>
+            android:hint="Description" />
 
     </LinearLayout>
 
