--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageAppIcon"
+        android:contentDescription="@string/cont_desc_app_icon"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageLogo"
+        android:contentDescription="@string/cont_desc_mohb_logo"
         android:layout_above="@+id/textName"
         android:layout_centerHorizontal="true"
         android:src="@drawable/mohb_logo"/>
