--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -28,10 +28,10 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/botNavView"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/null_size"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginStart="@dimen/null_size"
+        android:layout_marginEnd="@dimen/null_size"
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
