--- a/app/src/main/res/layout/gear_item.xml
+++ b/app/src/main/res/layout/gear_item.xml
@@ -10,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/gear_item_margin"
-        android:layout_marginRight="@dimen/gear_item_margin"
+        android:layout_marginLeft="@dimen/gear_note_item_margin"
+        android:layout_marginRight="@dimen/gear_note_item_margin"
         android:background="@color/colorBackgroundWhite"
         android:gravity="center"
-        android:padding="@dimen/gear_item_text_padding"
+        android:padding="@dimen/gear_note_item_text_padding"
         android:textColor="@color/colorBlackText"
         android:textStyle="bold"
         android:hint="gear item"/>
