--- a/app/src/main/res/menu/options_archive.xml
+++ b/app/src/main/res/menu/options_archive.xml
@@ -15,4 +15,10 @@
         android:title="@string/action_archive_all"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="3"
+        android:title="@string/action_help"
+        app:showAsAction="never" />
+
 </menu>
