--- a/app/src/main/res/menu/options_flickr_note.xml
+++ b/app/src/main/res/menu/options_flickr_note.xml
@@ -8,4 +8,10 @@
         android:title="@string/action_sync_clock"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="2"
+        android:title="@string/action_help"
+        app:showAsAction="never" />
+
 </menu>
