--- a/app/src/main/res/menu/options_flickr_notes.xml
+++ b/app/src/main/res/menu/options_flickr_notes.xml
@@ -28,4 +28,10 @@
         android:title="@string/action_unselect_all"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="5"
+        android:title="@string/action_help"
+        app:showAsAction="never" />
+
 </menu>
