--- a/app/src/main/res/menu/options_settings.xml
+++ b/app/src/main/res/menu/options_settings.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/ic_settings_backup_restore_white_24dp"
         android:title="@string/action_restore_defaults"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="2"
+        android:title="@string/action_help"
+        app:showAsAction="never" />
+
 </menu>
