--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="colorBackgroundTags">#f7f7f7</color>
     <color name="colorBackgroundGearNote">#f7f7f7</color>
     <color name="colorBackgroundPhotosets">#f7f7f7</color>
+    <color name="colorBackgroundPhotos">#f7f7f7</color>
     <color name="colorBackgroudSplash">#ffffff</color>
 
     <color name="black_overlay">#66000000</color>
