--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,8 +49,6 @@
     <dimen name="input_text_height">48dp</dimen>
     <dimen name="edit_text_size">20sp</dimen>
 
-    <dimen name="map_bounds_padding">100dp</dimen>
-
     <dimen name="view_header_height">1dp</dimen>
     <dimen name="view_footer_height">1dp</dimen>
     <dimen name="view_archive_footer_height">60dp</dimen>
@@ -58,9 +56,11 @@
     <dimen name="simple_note_text_padding">10dp</dimen>
     <dimen name="simple_note_font_size">30sp</dimen>
 
-    <dimen name="gear_item_text_padding">10dp</dimen>
-    <dimen name="gear_item_margin">10dp</dimen>
-    <dimen name="gear_item_elevation">0.25dp</dimen>
+    <dimen name="gear_note_item_text_padding">10dp</dimen>
+    <dimen name="gear_note_item_spacing">7dp</dimen>
+    <dimen name="gear_note_item_margin">7dp</dimen>
+    <dimen name="gear_note_item_radius">7dp</dimen>
+    <dimen name="gear_note_item_elevation">0.25dp</dimen>
 
     <dimen name="flickr_note_margin">20dp</dimen>
     <dimen name="flickr_note_title_text_size">21sp</dimen>
@@ -68,17 +68,27 @@
     <dimen name="flickr_note_tags_box_height">86dp</dimen>
     <dimen name="flickr_note_tags_text_size">9sp</dimen>
     <dimen name="flickr_note_map_height">170dp</dimen>
-    <dimen name="flickr_instructions_text_size">10sp</dimen>
+    <dimen name="flickr_note_map_bounds_padding">100dp</dimen>
+    <dimen name="flickr_note_instructions_text_size">10sp</dimen>
 
-    <dimen name="flickr_photo_size">100dp</dimen>
+    <dimen name="flickr_photosets_margin">12dp</dimen>
+    <dimen name="flickr_photosets_div_height">12dp</dimen>
+
     <dimen name="flickr_photoset_title_size">18sp</dimen>
     <dimen name="flickr_photoset_number_size">14sp</dimen>
+    <dimen name="flickr_photoset_thumb_size">120dp</dimen>
+    <dimen name="flickr_photoset_item_elevation">0.25dp</dimen>
+
+    <dimen name="flickr_upload_photos_margin">6dp</dimen>
+    <dimen name="flickr_upload_photos_div_height">6dp</dimen>
+
     <dimen name="flickr_photo_title_size">18sp</dimen>
     <dimen name="flickr_photo_description_size">14sp</dimen>
-
-    <dimen name="photoset_item_elevation">0.25dp</dimen>
-    <dimen name="photo_item_elevation">0.25dp</dimen>
+    <dimen name="flickr_photo_thumb_size">150dp</dimen>
+    <dimen name="flickr_photo_item_elevation">0.25dp</dimen>
 
     <dimen name="about_layout_margin">20dp</dimen>
+
+    <dimen name="null_size">0dp</dimen>
 
 </resources>
