--- a/app/src/main/res/layout-v21/gear_item.xml
+++ b/app/src/main/res/layout-v21/gear_item.xml
@@ -19,7 +19,6 @@
         android:gravity="center"
         android:padding="@dimen/gear_note_item_text_padding"
         android:textColor="@color/colorBlackText"
-        android:textStyle="bold"
-        android:hint="gear item"/>
+        android:textStyle="bold" />
 
 </LinearLayout>
