--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,9 +22,11 @@
 
     <!--Background colors-->
     <color name="colorBackgroundGreen">#00c853</color>
+    <color name="colorBackgroundLightGreen">#96FF8F</color>
     <color name="colorBackgroundDarkGreen">#1a7c07</color>
     <color name="colorBackgroundRed">#fa0c0c</color>
     <color name="colorBackgroundWhite">#ffffff</color>
+    <color name="colorBackgroundLightGrey">#F0F5F0</color>
     <color name="colorBackgroundTags">#f7f7f7</color>
     <color name="colorBackgroundGearNote">#f7f7f7</color>
     <color name="colorBackgroundPhotosets">#f7f7f7</color>
