--- a/docs/style.css
+++ b/docs/style.css
@@ -1,30 +1,26 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
-</head>
-
 p.title {
-  color: Black;
+  color: black;
   font-weight: bold;
   line-height: 0.0;
 }
 
 body {
-  color: Grey;
+  color: grey;
   line-height: 1.5;
 }
 
 a:link {
-  color: Grey;
+  color: grey;
   text-decoration: none;
 }
   
 a:hover {
-  color: Grey;
+  color: grey;
   text-decoration: underline;
 }
   
 a:visited {
-  color: Grey;
+  color: grey;
   text-decoration: none;
 }
  
