--- a/app/src/main/res/layout/activity_clock.xml
+++ b/app/src/main/res/layout/activity_clock.xml
@@ -27,7 +27,7 @@
             android:id="@+id/textDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="@dimen/text_date_margin_bottom"
             android:gravity="center"
             android:textColor="@color/colorWhiteText"
             android:textSize="@dimen/text_size_date"
@@ -42,9 +42,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/text_sync_margin_bottom"
         android:textColor="@color/colorWhiteText"
-        android:textSize="15sp"
+        android:textSize="@dimen/text_size_sync"
         android:text="@string/text_syncronize_clock" />
 
 </RelativeLayout>
