--- a/app/src/main/res/menu/options_flickr_note.xml
+++ b/app/src/main/res/menu/options_flickr_note.xml
@@ -6,11 +6,18 @@
         android:orderInCategory="1"
         android:icon="@drawable/ic_clock_white_24dp"
         android:title="@string/action_sync_clock"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_update_location"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_my_location_white_24"
+        android:title="@string/action_update_location"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_help"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/action_help"
         app:showAsAction="never" />
 
