--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,6 +34,14 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_elevation">15dp</dimen>
 
+    <dimen name="progress_bar_view_padding">40dp</dimen>
+    <dimen name="progress_bar_title_padding_bottom">10dp</dimen>
+    <dimen name="progress_ratio_padding_top">5dp</dimen>
+    <dimen name="progress_bar_title_text_size">18sp</dimen>
+    <dimen name="progress_spinner_view_padding">40dp</dimen>
+    <dimen name="progress_spinner_title_padding_top">10dp</dimen>
+    <dimen name="progress_spinner_title_text_size">18sp</dimen>
+
     <dimen name="dialog_margin">20dp</dimen>
     <dimen name="dialog_text_margin">25dp</dimen>
     <dimen name="dialog_widget_margin">17dp</dimen>
@@ -45,6 +53,9 @@
     <dimen name="text_detail_margin_left">12dp</dimen>
     <dimen name="text_size_time">48sp</dimen>
     <dimen name="text_size_date">24sp</dimen>
+    <dimen name="text_date_margin_bottom">80dp</dimen>
+    <dimen name="text_sync_margin_bottom">50dp</dimen>
+    <dimen name="text_size_sync">15sp</dimen>
 
     <dimen name="input_text_height">48dp</dimen>
     <dimen name="edit_text_size">20sp</dimen>
