--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -48,7 +48,7 @@
         android:key="@string/pref_group_flickr_upload_settings_key">
 
     <!-- Archive notes -->
-        <CheckBoxPreference
+        <SwitchPreferenceCompat
             android:key="@string/pref_key_archive_notes"
             android:title="@string/pref_title_archive_notes"
             android:summaryOn="@string/pref_archive_notes_summ_on"
@@ -56,7 +56,7 @@
             android:defaultValue="@string/pref_def_archive_notes" />
 
         <!-- Overwrite data -->
-        <CheckBoxPreference
+        <SwitchPreferenceCompat
             android:key="@string/pref_key_overwrite_data"
             android:title="@string/pref_title_overwrite_data"
             android:summaryOn="@string/pref_overwrite_data_summ_on"
@@ -64,7 +64,7 @@
             android:defaultValue="@string/pref_def_overwrite_data" />
 
         <!-- Upload location -->
-        <CheckBoxPreference
+        <SwitchPreferenceCompat
             android:key="@string/pref_key_upload_location"
             android:title="@string/pref_title_upload_location"
             android:summaryOn="@string/pref_upload_location_summ_on"
@@ -72,7 +72,7 @@
             android:defaultValue="@string/pref_def_upload_location" />
 
         <!-- Upload tags -->
-        <CheckBoxPreference
+        <SwitchPreferenceCompat
             android:key="@string/pref_key_upload_tags"
             android:title="@string/pref_title_upload_tags"
             android:summaryOn="@string/pref_upload_tags_summ_on"
