--- a/app/src/main/res/layout/fragment_edit_gear_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_edit_gear_list_dialog.xml
@@ -15,6 +15,7 @@
         android:importantForAutofill="no"
         android:inputType="text"
         android:textSize="@dimen/edit_text_size"
+        android:contentDescription="@string/dialog_edit_gear_title"
         tools:targetApi="o" />
 
 </LinearLayout>
